--- a/popup.html
+++ b/popup.html
@@ -83,6 +83,6 @@
         </label>
       </div>
     </div>
-    <script src='popup.js'></script>
+    <!-- <script src='popup.js'></script> -->
   </body>
 </html>
