--- a/popup.html
+++ b/popup.html
@@ -6,8 +6,9 @@
     .switch {
       position: relative;
       display: inline-block;
-      width: 60px;
-      height: 34px;
+      margin-left: 5px;
+      width: 30px;
+      height: 19px;
     }
 
     /* Hide default HTML checkbox */
@@ -29,10 +30,10 @@
     .slider:before {
       position: absolute;
       content: "";
-      height: 26px;
-      width: 26px;
-      left: 4px;
-      bottom: 4px;
+      height: 14px;
+      width: 14px;
+      left: 3px;
+      bottom: 3px;
       background-color: white;
       -webkit-transition: .4s;
       transition: .4s;
@@ -47,23 +48,24 @@
     }
 
     input:checked + .slider:before {
-      -webkit-transform: translateX(26px);
-      -ms-transform: translateX(26px);
-      transform: translateX(26px);
+      -webkit-transform: translateX(10px);
+      -ms-transform: translateX(10px);
+      transform: translateX(10px);
     }
 
     /* Rounded sliders */
     .slider.round {
-      border-radius: 34px;
+      border-radius: 12px;
     }
 
     .slider.round:before {
-      border-radius: 50%;
+      border-radius: 24px
     }
     .row {
       display: flex;
-      align-items: center;
       flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
     }
     .container {
       display: flex;
@@ -75,6 +77,8 @@
   </head>
   <body>
     <div class='container'>
+      <h3>This exstension is in Beta</h3>
+      <p>Some features may not work as expected...</p>
       <div class='row'>
         <h3>Highlight persist</h3>
         <label class="switch">
