--- a/popup.html
+++ b/popup.html
@@ -73,6 +73,19 @@
       width: 200px;
       padding: 15px;
     }
+    .button {
+      padding: 4px 8px;
+      background-color: #2196F3;
+      border: 1px solid white;
+      border-radius: 3px;
+      color: white;
+    }
+    .button:hover {
+      background-color: white;
+      border-color:#2196F3;
+      color:#2196F3;
+      cursor: pointer;
+    }
     </style>
   </head>
   <body>
@@ -85,6 +98,10 @@
           <input id='persistToggle' type="checkbox">
           <span class="slider round"></span>
         </label>
+      </div>
+      <div class='row'>
+        <div class='button'>Prev</div>
+        <div class='button'>Next</div>
       </div>
     </div>
     <!-- <script src='popup.js'></script> -->
