add color changer, fix multi select for url

--- a/popup.html
+++ b/popup.html
@@ -72,6 +72,7 @@
             align-items: center;
             justify-content: center;
         }
+        
         .row {
             display: flex;
             flex-direction: row;
@@ -110,7 +111,7 @@
             border-radius: 2px;
             border: solid 1px black;
         }
-
+        
         h3,
         p {
             margin: 0 0 10px 0;
@@ -123,38 +124,37 @@
         <h3>This exstension is in Beta</h3>
         <p>Some features may not work as expected...</p>
         <!-- <div class='row'>
-            <h3>Highlight persist</h3>
-            <label class="switch">
-          <input id='persistToggle' type="checkbox">
-          <span class="slider round"></span>
-        </label> -->
-        </div>
+          <h3>Highlight persist</h3>
+          <label class="switch">
+        <input id='persistToggle' type="checkbox">
+        <span class="slider round"></span>
+      </label> -->
         <h3>Highlight Color</h3>
         <div class='row'>
             <label class='column'>
-                <div class='colorChoice' style="background-color:#ff6700"></div>
-                <input class='colorChoice' name='colorPick' type='radio' value='#ff6700'/>
-            </label>
+          <div class='colorChoice' style="background-color:#ff6700"></div>
+          <input class='colorChoice' name='colorPick' type='radio' value='#ff6700'/>
+        </label>
             <label class='column'>
-                <div class='colorChoice' style="background-color:#ffd300"></div>
-                <input class='colorChoice' name='colorPick' type='radio' value='#ff6700'/>
-            </label>
+          <div class='colorChoice' style="background-color:#ffd300"></div>
+          <input class='colorChoice' name='colorPick' type='radio' value='#ffd300'/>
+        </label>
             <label class='column'>
-                <div class='colorChoice' style="background-color:#43ae39"></div>
-                <input class='colorChoice' name='colorPick' type='radio'value='#ff6700'/>
-            </label>
+          <div class='colorChoice' style="background-color:#43ae39"></div>
+          <input class='colorChoice' name='colorPick' type='radio' value='#43ae39'/>
+        </label>
             <label class='column'>
-                <div class='colorChoice' style="background-color:#aad5ff"></div>
-                <input class='colorChoice' name='colorPick' type='radio'value='#ff6700'/>
-            </label>
+          <div class='colorChoice' style="background-color:#aad5ff"></div>
+          <input class='colorChoice' name='colorPick' type='radio' value='#aad5ff'/>
+        </label>
             <label class='column'>
-                <div class='colorChoice' style="background-color:#c92e2e"></div>
-                <input class='colorChoice' name='colorPick' type='radio'value='#ff6700'/>
-            </label>
+          <div class='colorChoice' style="background-color:#c92e2e"></div>
+          <input class='colorChoice' name='colorPick' type='radio' value='#c92e2e'/>
+        </label>
             <label class='column'>
-                <div class='colorChoice' style="background-color:transparent"></div>
-                <input class='colorChoice' name='colorPick' type='radio'value='transparent'/>
-            </label>
+          <div class='colorChoice' style="background-color:transparent"></div>
+          <input class='colorChoice' name='colorPick' type='radio' value='transparent'/>
+        </label>
         </div>
         <div class='row'>
             <div id='prev' class='button'>Prev</div>
