update colors fix multiple selectio url

--- a/popup.html
+++ b/popup.html
@@ -123,33 +123,28 @@
     <div class='container'>
         <h3>This exstension is in Beta</h3>
         <p>Some features may not work as expected...</p>
-        <!-- <div class='row'>
-          <h3>Highlight persist</h3>
-          <label class="switch">
-        <input id='persistToggle' type="checkbox">
-        <span class="slider round"></span>
-      </label> -->
+
         <h3>Highlight Color</h3>
         <div class='row'>
             <label class='column'>
-          <div class='colorChoice' style="background-color:#ff6700"></div>
-          <input class='colorChoice' name='colorPick' type='radio' value='#ff6700'/>
+          <div class='colorChoice' style="background-color:#ff670099"></div>
+          <input class='colorChoice' name='colorPick' type='radio' value='#ff670099'/>
         </label>
             <label class='column'>
-          <div class='colorChoice' style="background-color:#ffd300"></div>
-          <input class='colorChoice' name='colorPick' type='radio' value='#ffd300'/>
+          <div class='colorChoice' style="background-color:#ffd30099"></div>
+          <input class='colorChoice' name='colorPick' type='radio' value='#ffd30099'/>
         </label>
             <label class='column'>
-          <div class='colorChoice' style="background-color:#43ae39"></div>
-          <input class='colorChoice' name='colorPick' type='radio' value='#43ae39'/>
+          <div class='colorChoice' style="background-color:#43ae3999"></div>
+          <input class='colorChoice' name='colorPick' type='radio' value='#43ae3999'/>
         </label>
             <label class='column'>
-          <div class='colorChoice' style="background-color:#aad5ff"></div>
-          <input class='colorChoice' name='colorPick' type='radio' value='#aad5ff'/>
+          <div class='colorChoice' style="background-color:#aad5ff99"></div>
+          <input class='colorChoice' name='colorPick' type='radio' value='#aad5ff99'/>
         </label>
             <label class='column'>
-          <div class='colorChoice' style="background-color:#c92e2e"></div>
-          <input class='colorChoice' name='colorPick' type='radio' value='#c92e2e'/>
+          <div class='colorChoice' style="background-color:#c92e2e99"></div>
+          <input class='colorChoice' name='colorPick' type='radio' value='#c92e2e99'/>
         </label>
             <label class='column'>
           <div class='colorChoice' style="background-color:transparent"></div>
